# learnforge

./: .editorconfig  .gitignore  .pre-commit-config.yaml  DELIVERY-MANIFESTS.md  IMPLEMENTATION_STATUS.md  LICENSE  LICENSE-content.md  Makefile  PYTHON_ENVIRONMENT.md  README.md  ROADMAP.md  _quarto-en.yml  _quarto-nb.yml  _quarto-student.yml  _quarto-teacher.yml  _quarto.yml  _variables.yml  environment.yml  learnforge.scss  pyproject.toml  representative-targets.yml  ui-spec.md
app/: __init__.py  assembly.py  build.py  cli.py  config.py  delivery.py  indexer.py  models.py  publish.py  resource_workflow.py  scaffold.py  schema_export.py  search.py  translation.py  validator.py
course-inbox/: README.md
deliveries/: bik2550-spring-2026.yml  bik2551-spring-2026.yml  gra4164-fall-2026.yml  tem0052-fall-2026.yml
filters/: visibility.lua
schemas/: base-object.schema.json  collection.schema.json  concept.schema.json  exercise.schema.json  figure.schema.json  resource.schema.json
scripts/: bootstrap.sh  bootstrap_micromamba.sh  build_representative_targets.py  export_pdf.sh  export_slides_pdf.sh  render.sh  run-in-env.sh
templates/: concept.en.qmd.j2  concept.nb.qmd.j2  meta.yml.j2  object.en.qmd.j2  object.nb.qmd.j2  resource-note.en.qmd.j2  resource-note.nb.qmd.j2
tests/: test_assembly.py  test_builds.py  test_cli.py  test_delivery_assembly.py  test_delivery_build.py  test_delivery_cli.py  test_delivery_models.py  test_delivery_validation.py  test_edi3400_course.py  test_gra4164_course.py  test_publish.py  test_scaffold.py  test_schedule.py  test_schema.py  (+4 more)
(+612 files in other folders)
